[+] fix validator map on safari

--- a/src/assets/sass/bootstrap-variables.scss
+++ b/src/assets/sass/bootstrap-variables.scss
@@ -50,18 +50,16 @@ $grid-breakpoints: (
   xxl: 1400px
 );
 
+// sm: 540px,
+// md: 720px,
+// lg: 960px,
+// xl: 1200px,
+// xxl: 1272px,
+
 // CONTAINER
 $container-max-widths: (
-  sm: 100vw,
-  // 540px,
-  md: 100vw,
-  // 720px,
-  lg: 100vw,
-  // 960px,
   xl: 1200px,
-  // 1140px,
-  xxl: 1272px,
-  // 1272px
+  xxl: 1272px
 );
 
 $border-radius: 8px;
