--- a/src/components/ValidatorMap/validatorMap.styles.scss
+++ b/src/components/ValidatorMap/validatorMap.styles.scss
@@ -1,7 +1,7 @@
 .validator-map {
   .rsm-svg {
     fill: var(--map-bg); // background color
-    stroke: var(--neutral-800); // border color
+    stroke: var(--neutral-900); // border color
     stroke-width: 0.015rem;
 
     .rsm-geography {
